Refresh favicon by being explicit.  Add some TODOs

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+  <link rel="shortcut icon" href="http://developer.rhino3d.com/favicon.ico?v=2" />
   <!-- Saving bookmarks to mobile devices -->
   <!-- For non-Retina (@1× display) iPhone, iPod Touch, and Android 2.1+ devices: -->
   <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/images/apple-touch-icon-precomposed.png"><!-- 57×57px -->
