More footer cosmetic fixes.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,12 +53,14 @@
               <a href="{{ burl | append: tailurl }}" target="_blank">Edit on GitHub</a>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-md-6 text-center">
             © 1997 - 20{{ site.time | date: '%y' }} Robert McNeel &amp; Associates
           </div>
 
           <div class="col-md-3">
+            <span class="pull-right">
               <span class="glyphicon glyphicon-cog"></span>&nbsp;<a href="{{ site.baseurl }}/admin">Admin</a>
+            </span>
           </div>
 
         </div>
