Build various version branches using build script and travis-ci
Intended for use with ci. Build script handles building of jekyll site
and pushing to gh-pages branch. Pre-specified version branches built
to subdirectories. Adds warning banner to non-stable versions linking
back to stable version (i.e. `master` which is built into the root).

 - GitHub deploy key encrypted with travis-cli.
 - Make "edit on github" link "branch specific"
 - Build script named script/cibuild (not for humans)
 - Move jeyll_serve_exclude_api.sh to script/server (for humans)
 - If not on a version branch, let ci check for errors in the site
 - Update readme with instructions for branch-aware deployment
 - Remove CONTRIBUTING.md while we consider CLAs

See: WWW-245

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -10,6 +10,8 @@
     {% include googletagmanager.html %}
 
     <div class="container">
+      {% include version-banner.html %}
+
       {% include header.html %}
 
       <div class="page-content">
@@ -33,7 +35,7 @@
     <script type="text/javascript">
     $('body').scrollspy({
         target: '.bs-docs-sidebar',
-        offset: 110
+        offset: 150 /* fixed header is about 40px high */
     });
     </script>
   </body>
