--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -1,6 +1,6 @@
 {% if site.git_branch and site.git_branch != "master" %}
 <div class="version-banner">
-  Hey, you're viewing the <strong>{{ site.git_branch }}</strong> version of this page!
-  Click <a href="{{site.baseurl_orig}}{{ page.url }}">here</a> to view the current (stable) version.
+    Hey, you're viewing the <strong>{{ site.git_branch }}</strong> version of this page!
+    <a href="{{site.baseurl_orig}}{{ page.url }}">View the current version instead.</a>
 </div>
 {% endif %}
