Disable robots (noindex) on the wip version of the site so that it does not compete with the stable in search results.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,4 +45,6 @@
   <!-- For Chrome for Android: -->
   <link rel="icon" sizes="192x192" href="images/touch-icon-192x192.png">
 
+  <!-- Diable crawling until this version is the stable version -->
+  <meta name="robots" content="noindex" />
 </head>
