--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,13 +12,21 @@
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:description" content="{{ page.description }}" />
   <meta property=”og:site_name” content="developer.rhino3d.com"/>
-  <meta property=”og:image” content="{{ site.baseurl }}/images/rhinodevlogo_trans.png"/>
+  <meta property=”og:image” content="{{ site.baseurl }}/images/rhinodev_logo_unfurl.png"/>
 
   <!-- twitter card tags additive with the og: tags -->
   <meta name="twitter:domain" value="developer.rhino3d.com" />
   <meta name="twitter:title" value="{{ page.title }}" />
   <meta name="twitter:description" value="{{ page.description }}" />
-  <meta name="twitter:image" content="{{ site.baseurl }}/images/rhinodevlogo_trans.png" />
+  {% if page.apis %}
+    {% if page.apis contains 'Grasshopper' %}
+      <meta name="twitter:image" content="{{ site.baseurl }}/images/grasshopper_logo_unfurl.png" />
+    {% else %}
+      <meta name="twitter:image" content="{{ site.baseurl }}/images/rhinodev_logo_unfurl.png" />
+    {% endif %}
+  {% else %}
+    <meta name="twitter:image" content="{{ site.baseurl }}/images/rhinodev_logo_unfurl.png" />
+  {% endif %}
   <meta name="twitter:url" value="http://developer.rhino3d.com" />
   {% if page.platforms %}
   <meta name="twitter:label1" value="Supported Platform(s)" />
