--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -9,7 +9,7 @@
   	  {
         document.write('<a href="http://developer.rhino3d.com">View the current site instead.</a>');
       } else {
-        document.write('<a href="http://developer.rhino3d.com' + nonWipURL + '">View the current site instead.</a>');
+        document.write('<a href="http://developer.rhino3d.com' + nonWipURL + '">View the current version instead.</a>');
       });
     </script>
 </div>
