--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,8 +43,8 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   <!-- Check the version banner for broken links and remove the link if found -->
-  <script type="text/javascript" src="banner_sanity.js"></script>
-  
+  <script type="text/javascript" src="/script/banner_sanity.js"></script>
+
   <!-- Overridden theme -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 
