Reference jQuery earlier

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,7 @@
 
   <!-- Check the version banner for broken links and remove the link if found -->
   <!-- <script type="text/javascript" src="/script/banner_sanity.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>
   $.ready(function()
   {
