--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -3,4 +3,21 @@
     Hey, you're viewing the <strong>{{ site.git_branch }}</strong> version of this page!
     <a href="{{site.baseurl_orig}}{{ page.url }}">View the current version instead.</a>
 </div>
+
+<!-- Check the version banner for broken links and remove the link if found -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>
+$(document).ready(function()
+{
+  var splitPath = window.location.pathname.split("/");
+  var nonWipURL = "/" + splitPath.splice(2,splitPath.length-2).join("/");
+
+  $.get(nonWipURL).fail(function ()
+  {
+    var $aTag = $("div.version-banner > a");
+    $aTag.remove();
+  });
+});
+</script>
+
 {% endif %}
