Prevent the version banner from obscuring anchor headings
When an anchor link is clicked the associated heading should appear _below_
the version banner. Works on my iPhone too.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,7 +22,7 @@ body {
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
 
-    // Make some space for the version banner
+    // make some space so that the version banner doesn't obscure the header nav
     @if $branch != "" and $branch != "master" {
       padding-top: 36px;
 
