Apple Mac OS X is now macOS - made changes where appropriate.

--- a/_layouts/guide-homepage.html
+++ b/_layouts/guide-homepage.html
@@ -8,7 +8,7 @@ layout: bootstrap
     <img src="{{ site.baseurl }}/images/win_logo_small.png" alt="Windows" class="guide_icon">
   {% endif %}
   {% if page.platforms contains 'Mac' %}
-    <img src="{{ site.baseurl }}/images/mac_logo_small.png" alt="OS X" class="guide_icon">
+    <img src="{{ site.baseurl }}/images/mac_logo_small.png" alt="macOS" class="guide_icon">
   {% endif %}
   {% if page.platforms contains 'Android' %}
     <img src="{{ site.baseurl }}/images/android_logo_small.png" alt="Android" class="guide_icon">
