--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -15,7 +15,9 @@ layout: bootstrap
         <article class="post-content">
           <ol class="breadcrumb">
               {% assign api = page.apis[0] %}
-              <li><a href="{{ site.baseurl }}/guides/#{{ api | downcase }}">{{ api }}</a></li>
+              {% assign api_url = api | downcase %}
+              {% if api_url == 'c/c++' %}{% assign api_url = 'cpp' %}{% endif %}
+              <li><a href="{{ site.baseurl }}/guides/#{{ api_url }}">{{ api }}</a></li>
               {% if page.categories != page.apis %}
               <li class="active">{{ page.categories }}</li>
               {% endif %}
