--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -1,9 +1,9 @@
 
 /* Mimicing GitHub's font styling, but puttin Segou UI higher (the Grasshopper font) for Windows users */
 body {
-  font-family: 'Segoe UI', Frutiger, 'Frutiger Linotype', 'Dejavu Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.5;
   font-weight: 300;
   font-style: normal;
   font-variant: normal;
