--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -17,7 +17,7 @@ layout: bootstrap
               {% assign api = page.apis[0] %}
               {% assign api_url = api | downcase %}
               {% if api_url == 'c/c++' %}{% assign api_url = 'cpp' %}{% endif %}
-              <li><a href="{{ site.baseurl }}/guides/#{{ api_url }}">{{ api }}</a></li>
+              <li><a href="{{ site.baseurl }}/guides/{{ api_url }}">{{ api }}</a></li>
               {% if page.categories != page.apis %}
               <li class="active">{{ page.categories }}</li>
               {% endif %}
