Fix "edit on github" links for local preview
Also fixes funny banner in local preview.

--- a/_includes/version-banner.html
+++ b/_includes/version-banner.html
@@ -1,4 +1,4 @@
-{% if site.git_branch and site.git_branch != "master" %}
+{% if site.git_branch and site.git_branch != "" and site.git_branch != "master" %}
 <div class="version-banner">
     Hey, you're viewing the <strong>{{ site.git_branch }}</strong> version of this page!
     <a href="{{site.baseurl_orig}}{{ page.url }}">View the current version instead.</a>
