Add guide byline css style.

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -36,6 +36,11 @@ body {
     border-left-color: #ce4844;
 }
 
+.guide_byline {
+    font-style: italic;
+    font-size: 14px;
+}
+
 /* Search input form and search results styling */
 
 #sitesearch {
