Add title, byline, and description generation to the toc-guide-layout.  Cite WWW-382.

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -23,6 +23,12 @@ layout: bootstrap
               {% endif %}
           </ol>
 
+          <h1>{{ page.title }}</h1>
+
+          <p>{% include byline.html %}</p>
+
+          <p>{{ page.description }}</p>
+
           {{ content }}
         </article>
 
