--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -323,6 +323,24 @@ tbody.index_table tr td{
   }
 }
 
+
+/*
+##############################################################################
+##  Multiline text tables 
+##############################################################################
+*/
+
+.multiline {
+	rule:rows;
+	vertical-align:top; !important;
+}
+
+.multiline-cell td {
+	padding:10px 5px;
+	vertical-align:top; !important;
+}
+
+
 /*
 ##############################################################################
 ## RhinoScriptSyntax API docs
