--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -147,6 +147,17 @@ kbd
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
+.img-center {
+  text-align:center;
+  display:block;
+  padding-right: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto
+}
+
 .clear-img {
   clear:both;
 }
