--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -115,6 +115,7 @@ kbd
     border:1px solid #ccc;
     border-radius:3px;
     box-shadow:0 1px 0 rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+	text-shadow:0 1px 0 #fff;
     color:#333;
     display:inline-block;
     font-family:Arial,Helvetica,sans-serif;
@@ -122,7 +123,18 @@ kbd
     line-height:1.4;
     margin:0 .1em;
     padding:.1em .6em;
-    text-shadow:0 1px 0 #fff;
+}
+
+/*
+##############################################################################
+## inline code overrides. 
+##############################################################################
+*/
+
+code {
+	color: #000000;
+	background-color: transparent;
+	
 }
 
 /*
