--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -127,14 +127,32 @@ kbd
 
 /*
 ##############################################################################
-## inline code overrides. 
+## code block (highlight.js) overrides.
+##############################################################################
+*/
+
+.hljs-line-numbers {
+    text-align: right;
+    border-right: 1px solid #ccc;
+    color: #999;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/*
+##############################################################################
+## inline code overrides.
 ##############################################################################
 */
 
 code {
 	color: #000000;
 	background-color: transparent;
-	
+
 }
 
 /*
