--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -101,7 +101,11 @@ body {
 #cse-search-results iframe {
 	height : 1150px;
 }
-
+ 
+/* Coordinating the codeblock background with pre container baockground */
+pre {
+	background-color: #f8f8f8;
+}
 
 
 /* kbd overrides */
@@ -143,6 +147,13 @@ kbd
     user-select: none;
 }
 
+.hljs-line-numbers {
+	display:none;
+}
+
+.line-numbers code{
+	display:block;
+}
 /*
 ##############################################################################
 ## inline code overrides.
