--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -39,6 +39,18 @@
         offset: 150 /* fixed header is about 40px high */
     });
     </script>
+    <!-- 
+    Next block expands Bootstrap Collapse component when linked to it.  Used in rhinoscriptsyntax api docs
+    ex: http://developer.rhino3d.com/api/RhinoScriptSyntax/win/#collapse-PointCompare
+    -->
+    <script type="text/javascript">
+    $(document).ready(function () {
+        if(document.title == 'rhinoscriptsyntax' && location.hash != null && location.hash != ""){
+            $('.collapse').removeClass('in');
+            $(location.hash + '.collapse').collapse('show');
+        }
+    });
+    </script>
   </body>
 
 </html>
