--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -299,6 +299,24 @@ tbody.index_table tr td{
 
 /*
 ##############################################################################
+##  Essential Mathematics span element for word wrapped notes
+##############################################################################
+*/
+
+.note p{
+	width: 80%;
+	margin: auto;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: DarkRed;
+	padding: 5px;
+}
+
+
+/*
+##############################################################################
 ##  guides.md Page
 ##############################################################################
 */
