Additional comments for the new notes class style sheet.

--- a/css/bootstrap-override.css
+++ b/css/bootstrap-override.css
@@ -299,7 +299,9 @@ tbody.index_table tr td{
 
 /*
 ##############################################################################
-##  Essential Mathematics span element for word wrapped notes
+##  Essential Mathematics div element for word wrapped notes
+##  Start a markdown section with:
+##  <div class="note" markdown="1">
 ##############################################################################
 */
 
