Quick debug message removal

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -22,7 +22,7 @@ layout: bootstrap
 			    {% if page.guide_homepage %}
 			      <li class="active"><a href="{{site.baseurl}}{{page.guide_homepage}}">{{ page.categories }}</a></li>
 			    {% else %}
-                  <li class="active">{{ page.categories }} page cat = {{page.guide_homepage}}</li>
+                  <li class="active">{{ page.categories }}</li>
                 {% endif %}
               {% endif %}			  
           </ol>
