Update mathjax to use cloudflare cdn
cdn.mathjax.org is shutting down

(cherry picked from commit f1145c0953625811800e8add56e53eb5dab08a70)

--- a/_layouts/bootstrap.html
+++ b/_layouts/bootstrap.html
@@ -31,7 +31,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     <!-- MathJax -->
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <script type="text/javascript">
     $('body').scrollspy({
