Fix main breadcrumb logic in toc-guide-pages.  Still has bug with subsides.

--- a/_layouts/toc-guide-page.html
+++ b/_layouts/toc-guide-page.html
@@ -13,18 +13,22 @@ layout: bootstrap
       <!--<div class="post">-->
 
         <article class="post-content">
+
           <ol class="breadcrumb">
-              {% assign api = page.apis[0] %}
-              {% assign api_url = api | downcase %}
-              {% if api_url == 'c/c++' %}{% assign api_url = 'cpp' %}{% endif %}
-              <li><a href="{{ site.baseurl }}/guides/{{ api_url }}">{{ api }}</a></li>
-              {% if page.categories != page.apis %}
-			    {% if page.guide_homepage %}
-			      <li class="active"><a href="{{site.baseurl}}{{page.guide_homepage}}">{{ page.categories }}</a></li>
-			    {% else %}
-                  <li class="active">{{ page.categories }}</li>
-                {% endif %}
-              {% endif %}			  
+              {% assign sdk = page.sdk[0] %}
+              {% assign sdk_url = sdk | downcase %}
+              {% if sdk_url == 'c/c++' %}
+                {% assign sdk_url = 'cpp' %}
+              {% endif %}
+              <li><a href="{{ site.baseurl }}/guides/{{ sdk_url }}">{{ sdk }}</a></li>
+
+              {% if page.categories != page.sdk %}
+                <li class="active">{{ page.categories }}</li>
+              {% endif %}
+
+              {% if page.guide_homepage %}
+                <li class="active"><a href="{{site.baseurl}}/{{page.guide_homepage}}">{{ page.categories }}</a></li>
+              {% endif %}
           </ol>
 
           <h1>{{ page.title }}</h1>
